--- a/monolito/index.html
+++ b/monolito/index.html
@@ -1,19 +1,132 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Biblioteca Online - Monolito</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.gstatic.com/firebasejs/12.2.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/12.2.1/firebase-firestore-compat.js"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        'neutral': {
+                            50: '#fafafa',
+                            100: '#f5f5f5',
+                            200: '#e5e5e5',
+                            300: '#d4d4d4',
+                            400: '#a3a3a3',
+                            500: '#737373',
+                            600: '#525252',
+                            700: '#404040',
+                            800: '#262626',
+                            900: '#171717',
+                        }
+                    }
+                }
+            }
+        }
+    </script>
 </head>
+<body class="bg-gradient-to-br from-neutral-50 to-neutral-100 min-h-screen flex flex-col">
+    <!-- Navigation Bar -->
+    <nav class="bg-white shadow-sm border-b border-neutral-200">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between items-center py-4">
+                <div class="flex items-center space-x-8">
+                    <h1 class="text-xl font-bold text-neutral-800">Biblioteca Online</h1>
+                    <div class="hidden md:flex space-x-6">
+                        <a href="index.html" class="text-neutral-600 hover:text-neutral-800 font-medium">Inicio</a>
+                        <a href="libros.html" class="text-neutral-600 hover:text-neutral-800 font-medium">Libros</a>
+                        <a href="usuarios.html" class="text-neutral-600 hover:text-neutral-800 font-medium">Usuarios</a>
+                        <a href="prestamos.html" class="text-neutral-600 hover:text-neutral-800 font-medium">Préstamos</a>
+                    </div>
+                </div>
+                <div class="md:hidden">
+                    <button class="text-neutral-600 hover:text-neutral-800">
+                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </nav>
 
-<body>
+    <!-- Main Content -->
+    <main class="flex-1 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
+        <!-- Welcome Section -->
+        <div class="text-center mb-16">
+            <h1 class="text-4xl font-bold text-neutral-800 mb-6">Bienvenido</h1>
+            <p class="text-xl text-neutral-600 max-w-3xl mx-auto mb-12">
+                Gestiona los recursos de la biblioteca de forma fácil y rápida.
+            </p>
+            
+            <!-- Quick Access Buttons -->
+            <div class="flex flex-col sm:flex-row gap-6 justify-center items-center">
+                <a href="libros.html" 
+                   class="inline-flex items-center px-8 py-4 bg-neutral-800 text-white font-medium rounded-lg hover:bg-neutral-700 transition-colors duration-200 shadow-lg hover:shadow-xl">
+                    <svg class="w-6 h-6 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.746 0 3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path>
+                    </svg>
+                    Ver Libros
+                </a>
+                
+                <a href="prestamos.html" 
+                   class="inline-flex items-center px-8 py-4 bg-white text-neutral-800 font-medium rounded-lg border-2 border-neutral-300 hover:border-neutral-400 transition-colors duration-200 shadow-lg hover:shadow-xl">
+                    <svg class="w-6 h-6 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4"></path>
+                    </svg>
+                    Ver Préstamos
+                </a>
+            </div>
+        </div>
 
+        <!-- Features Overview -->
+        <div class="grid md:grid-cols-3 gap-8 max-w-5xl mx-auto">
+            <div class="bg-white rounded-xl shadow-sm border border-neutral-200 p-6 text-center">
+                <div class="w-12 h-12 bg-neutral-100 rounded-lg flex items-center justify-center mx-auto mb-4">
+                    <svg class="w-6 h-6 text-neutral-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.746 0 3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path>
+                    </svg>
+                </div>
+                <h3 class="font-semibold text-neutral-800 mb-2">Gestión de Libros</h3>
+                <p class="text-neutral-600 text-sm">Agrega, edita y administra el catálogo de libros de la biblioteca</p>
+            </div>
+
+            <div class="bg-white rounded-xl shadow-sm border border-neutral-200 p-6 text-center">
+                <div class="w-12 h-12 bg-neutral-100 rounded-lg flex items-center justify-center mx-auto mb-4">
+                    <svg class="w-6 h-6 text-neutral-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197m13.5-9a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0z"></path>
+                    </svg>
+                </div>
+                <h3 class="font-semibold text-neutral-800 mb-2">Gestión de Usuarios</h3>
+                <p class="text-neutral-600 text-sm">Registra y administra los miembros de la biblioteca</p>
+            </div>
+
+            <div class="bg-white rounded-xl shadow-sm border border-neutral-200 p-6 text-center">
+                <div class="w-12 h-12 bg-neutral-100 rounded-lg flex items-center justify-center mx-auto mb-4">
+                    <svg class="w-6 h-6 text-neutral-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4"></path>
+                    </svg>
+                </div>
+                <h3 class="font-semibold text-neutral-800 mb-2">Control de Préstamos</h3>
+                <p class="text-neutral-600 text-sm">Gestiona los préstamos y devoluciones de libros</p>
+            </div>
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="bg-white border-t border-neutral-200 mt-auto">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 sm:py-6">
+            <div class="text-center text-neutral-600 text-sm sm:text-base">
+                <p>&copy; 2024 Biblioteca Online - Arquitectura Monolítica</p>
+            </div>
+        </div>
+    </footer>
 </body>
-
 </html>
 <script src="conexion.js"></script>
 <script src="db_biblioteca.js"></script>
-</body>
